--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
     }
 
     img {
-      width: 100%;
-      height: auto;
-      max-width: 300px;
+      width: 300px;
+      height: 300px;
     }
   </style>
 </head>
