--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
-    img {
-      width: 300px;
-      height: 300px;
-    }
+   width: 100%;
+    height: auto;
+    max-width: 300px; /* Si tu veux limiter la taille maximale sur des écrans plus larges */
+  }
   </style>
 </head>
 <body>
