--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="description" content="Site web de la famille Keur Mame Diamangal, partage de souvenirs et d'événements familiaux">
   <meta name="keywords" content="famille, Keur Mame Diamangal, biographies, images, vidéos">
   <title>KEUR MAME DIAMANGAL</title>
+
+  <!-- Lightbox2 CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -58,10 +62,22 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
-   width: 100%;
-    height: auto;
-    max-width: 300px; /* Si tu veux limiter la taille maximale sur des écrans plus larges */
-  }
+    /* Thumbnail Styling */
+    .thumbnail {
+      max-width: 150px;
+      height: auto;
+      margin: 10px;
+      cursor: pointer;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    a:hover img {
+      opacity: 0.8;
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
@@ -81,47 +97,83 @@
     <h1>BIENVENUE LA FAMILLE!</h1>
     <section id="images">
       <h2>IMAGES</h2>
-      <img src="images/IMG-20240322-WA0090.jpg">
-      <img src="images/IMG-20240322-WA0091.jpg">
-      <img src="images/IMG-20240322-WA0092.jpg">
-      <img src="images/IMG-20240322-WA0093.jpg">
-      <img src="images/IMG-20240322-WA0094.jpg">
-      <img src="images/IMG-20240322-WA0095.jpg">
-      <img src="images/IMG-20240322-WA0098.jpg">
-      <img src="images/IMG-20240322-WA0101.jpg">
-      <img src="images/IMG-20240322-WA0104.jpg">
-      <img src="images/IMG-20240322-WA0105.jpg">
-      <img src="images/IMG-20240322-WA0106.jpg">
-      <img src="images/IMG-20240322-WA0107.jpg">
-      <img src="images/IMG-20240322-WA0108.jpg">
-      <img src="images/IMG-20240322-WA0109.jpg">
-      <img src="images/IMG-20240322-WA0110.jpg">
-      <img src="images/IMG-20240322-WA0065.jpg">
-      <img src="images/IMG-20240322-WA0066.jpg">
-      <img src="images/IMG-20240322-WA0067.jpg">
-      <img src="images/IMG-20240322-WA0068.jpg">
-      <img src="images/IMG-20240322-WA0069.jpg">
-      <img src="images/IMG-20240322-WA0070.jpg">
-      <img src="images/IMG-20240322-WA0071.jpg">
-      <img src="images/IMG-20240322-WA0072.jpg">
-      <img src="images/IMG-20240322-WA0073.jpg">
-      <img src="images/IMG-20240322-WA0074.jpg">
-      <img src="images/IMG-20240322-WA0075.jpg">
-      <img src="images/IMG-20240322-WA0076.jpg">
-      <img src="images/IMG-20240322-WA0077.jpg">
-      <img src="images/IMG-20240322-WA0078.jpg">
-      <img src="images/IMG-20240322-WA0079.jpg">
-      <img src="images/IMG-20240322-WA0080.jpg">
-      <img src="images/IMG-20240322-WA0081.jpg">
-      <img src="images/IMG-20240322-WA0082.jpg">
-      <img src="images/IMG-20240322-WA0083.jpg">
-      <img src="images/IMG-20240322-WA0084.jpg">
-      <img src="images/IMG-20240322-WA0085.jpg">
-      <img src="images/IMG-20240322-WA0086.jpg">
-      <img src="images/IMG-20240322-WA0087.jpg">
-      <img src="images/IMG-20240322-WA0088.jpg">
-      <img src="images/IMG-20240322-WA0089.jpg">
+
+      <!-- Thumbnails with links to full-size images using Lightbox2 -->
+      <a href="images/IMG-20240322-WA0090.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0090.jpg" class="thumbnail" alt="Image 1">
+      </a>
+      <a href="images/IMG-20240322-WA0091.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0091.jpg" class="thumbnail" alt="Image 2">
+      </a>
+      <a href="images/IMG-20240322-WA0092.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0092.jpg" class="thumbnail" alt="Image 3">
+      </a>
+      <a href="images/IMG-20240322-WA0093.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0093.jpg" class="thumbnail" alt="Image 4">
+      </a>
+      <a href="images/IMG-20240322-WA0094.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0094.jpg" class="thumbnail" alt="Image 5">
+      </a>
+      <a href="images/IMG-20240322-WA0095.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0095.jpg" class="thumbnail" alt="Image 6">
+      </a>
+      <a href="images/IMG-20240322-WA0098.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0098.jpg" class="thumbnail" alt="Image 7">
+      </a>
+      <a href="images/IMG-20240322-WA0101.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0101.jpg" class="thumbnail" alt="Image 8">
+      </a>
+      <a href="images/IMG-20240322-WA0104.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0104.jpg" class="thumbnail" alt="Image 9">
+      </a>
+      <a href="images/IMG-20240322-WA0105.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0105.jpg" class="thumbnail" alt="Image 10">
+      </a>
+      <a href="images/IMG-20240322-WA0106.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0106.jpg" class="thumbnail" alt="Image 11">
+      </a>
+      <a href="images/IMG-20240322-WA0107.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0107.jpg" class="thumbnail" alt="Image 12">
+      </a>
+      <a href="images/IMG-20240322-WA0108.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0108.jpg" class="thumbnail" alt="Image 13">
+      </a>
+      <a href="images/IMG-20240322-WA0109.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0109.jpg" class="thumbnail" alt="Image 14">
+      </a>
+      <a href="images/IMG-20240322-WA0110.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0110.jpg" class="thumbnail" alt="Image 15">
+      </a>
+      <a href="images/IMG-20240322-WA0065.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0065.jpg" class="thumbnail" alt="Image 16">
+      </a>
+      <a href="images/IMG-20240322-WA0066.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0066.jpg" class="thumbnail" alt="Image 17">
+      </a>
+      <a href="images/IMG-20240322-WA0067.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0067.jpg" class="thumbnail" alt="Image 18">
+      </a>
+      <a href="images/IMG-20240322-WA0068.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0068.jpg" class="thumbnail" alt="Image 19">
+      </a>
+      <a href="images/IMG-20240322-WA0069.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0069.jpg" class="thumbnail" alt="Image 20">
+      </a>
+      <a href="images/IMG-20240322-WA0070.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0070.jpg" class="thumbnail" alt="Image 21">
+      </a>
+      <a href="images/IMG-20240322-WA0071.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0071.jpg" class="thumbnail" alt="Image 22">
+      </a>
+      <a href="images/IMG-20240322-WA0072.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0072.jpg" class="thumbnail" alt="Image 23">
+      </a>
+      <a href="images/IMG-20240322-WA0073.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0073.jpg" class="thumbnail" alt="Image 24">
+      </a>
+
     </section>
+
     <section id="videos">
       <h2>VIDÉOS</h2>
       <p>Placez ici vos vidéos.</p>
@@ -135,8 +187,12 @@
       <p>Placez ici vos reportages familiaux.</p>
     </section>
   </main>
+
   <footer>
     <p>© 2024 keur mame DIAMANGAL</p>
   </footer>
+
+  <!-- Lightbox2 JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
