--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   <meta name="description" content="Site web de la famille Keur Mame Diamangal, partage de souvenirs et d'événements familiaux">
   <meta name="keywords" content="famille, Keur Mame Diamangal, biographies, images, vidéos">
   <title>KEUR MAME DIAMANGAL</title>
-
-  <!-- Lightbox2 CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
-
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -62,23 +58,26 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
-    /* Thumbnail Styling */
     .thumbnail {
-      max-width: 150px;
+      width: 100px; /* Smaller size for thumbnails */
       height: auto;
-      margin: 10px;
-      cursor: pointer;
+      margin: 5px;
+      border: 1px solid #ccc;
+      transition: transform 0.3s ease; /* Smooth zoom */
+    }
+
+    .thumbnail:hover {
+      transform: scale(1.1); /* Slight zoom on hover */
     }
 
     a {
       text-decoration: none;
     }
 
-    a:hover img {
-      opacity: 0.8;
-      transform: scale(1.05);
-    }
   </style>
+  <!-- Add Lightbox script -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </head>
 <body>
   <header>
@@ -93,106 +92,154 @@
       </ul>
     </nav>
   </header>
+  
   <main>
     <h1>BIENVENUE LA FAMILLE!</h1>
+    
     <section id="images">
       <h2>IMAGES</h2>
-
-      <!-- Thumbnails with links to full-size images using Lightbox2 -->
-      <a href="images/IMG-20240322-WA0090.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0090.jpg" class="thumbnail" alt="Image 1">
-      </a>
-      <a href="images/IMG-20240322-WA0091.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0091.jpg" class="thumbnail" alt="Image 2">
-      </a>
-      <a href="images/IMG-20240322-WA0092.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0092.jpg" class="thumbnail" alt="Image 3">
-      </a>
-      <a href="images/IMG-20240322-WA0093.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0093.jpg" class="thumbnail" alt="Image 4">
-      </a>
-      <a href="images/IMG-20240322-WA0094.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0094.jpg" class="thumbnail" alt="Image 5">
-      </a>
-      <a href="images/IMG-20240322-WA0095.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0095.jpg" class="thumbnail" alt="Image 6">
-      </a>
-      <a href="images/IMG-20240322-WA0098.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0098.jpg" class="thumbnail" alt="Image 7">
-      </a>
-      <a href="images/IMG-20240322-WA0101.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0101.jpg" class="thumbnail" alt="Image 8">
-      </a>
-      <a href="images/IMG-20240322-WA0104.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0104.jpg" class="thumbnail" alt="Image 9">
-      </a>
-      <a href="images/IMG-20240322-WA0105.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0105.jpg" class="thumbnail" alt="Image 10">
-      </a>
-      <a href="images/IMG-20240322-WA0106.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0106.jpg" class="thumbnail" alt="Image 11">
-      </a>
-      <a href="images/IMG-20240322-WA0107.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0107.jpg" class="thumbnail" alt="Image 12">
-      </a>
-      <a href="images/IMG-20240322-WA0108.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0108.jpg" class="thumbnail" alt="Image 13">
-      </a>
-      <a href="images/IMG-20240322-WA0109.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0109.jpg" class="thumbnail" alt="Image 14">
-      </a>
-      <a href="images/IMG-20240322-WA0110.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0110.jpg" class="thumbnail" alt="Image 15">
-      </a>
+      <!-- Images with thumbnail and lightbox feature -->
       <a href="images/IMG-20240322-WA0065.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0065.jpg" class="thumbnail" alt="Image 16">
+        <img src="images/IMG-20240322-WA0065.jpg" class="thumbnail">
       </a>
       <a href="images/IMG-20240322-WA0066.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0066.jpg" class="thumbnail" alt="Image 17">
+        <img src="images/IMG-20240322-WA0066.jpg" class="thumbnail">
       </a>
       <a href="images/IMG-20240322-WA0067.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0067.jpg" class="thumbnail" alt="Image 18">
+        <img src="images/IMG-20240322-WA0067.jpg" class="thumbnail">
       </a>
       <a href="images/IMG-20240322-WA0068.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0068.jpg" class="thumbnail" alt="Image 19">
+        <img src="images/IMG-20240322-WA0068.jpg" class="thumbnail">
       </a>
       <a href="images/IMG-20240322-WA0069.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0069.jpg" class="thumbnail" alt="Image 20">
+        <img src="images/IMG-20240322-WA0069.jpg" class="thumbnail">
       </a>
       <a href="images/IMG-20240322-WA0070.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0070.jpg" class="thumbnail" alt="Image 21">
+        <img src="images/IMG-20240322-WA0070.jpg" class="thumbnail">
       </a>
       <a href="images/IMG-20240322-WA0071.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0071.jpg" class="thumbnail" alt="Image 22">
+        <img src="images/IMG-20240322-WA0071.jpg" class="thumbnail">
       </a>
       <a href="images/IMG-20240322-WA0072.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0072.jpg" class="thumbnail" alt="Image 23">
+        <img src="images/IMG-20240322-WA0072.jpg" class="thumbnail">
       </a>
       <a href="images/IMG-20240322-WA0073.jpg" data-lightbox="family-images">
-        <img src="images/IMG-20240322-WA0073.jpg" class="thumbnail" alt="Image 24">
+        <img src="images/IMG-20240322-WA0073.jpg" class="thumbnail">
       </a>
-
+      <a href="images/IMG-20240322-WA0074.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0074.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0075.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0075.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0076.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0076.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0077.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0077.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0078.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0078.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0079.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0079.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0080.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0080.jpg" class="thumbnail">
+      </a>
+      <!-- Continue filling the rest up to 110 -->
+      <a href="images/IMG-20240322-WA0081.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0081.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0082.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0082.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0083.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0083.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0084.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0084.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0085.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0085.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0086.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0086.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0087.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0087.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0088.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0088.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0089.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0089.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0090.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0090.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0091.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0091.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0092.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0092.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0093.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0093.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0094.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0094.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0095.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0095.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0098.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0098.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0101.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0101.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0104.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0104.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0105.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0105.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0106.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0106.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0107.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0107.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0108.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0108.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0109.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0109.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0110.jpg" data-lightbox="family-images">
+        <img src="images/IMG-20240322-WA0110.jpg" class="thumbnail">
+      </a>
     </section>
 
     <section id="videos">
       <h2>VIDÉOS</h2>
-      <p>Placez ici vos vidéos.</p>
+      <p>Vidéos familiales à venir...</p>
     </section>
+
     <section id="biographies">
       <h2>BIOGRAPHIES</h2>
-      <p>Placez ici les biographies des membres de la famille.</p>
+      <p>Biographies familiales à venir...</p>
     </section>
+
     <section id="reportages">
       <h2>REPORTAGES</h2>
-      <p>Placez ici vos reportages familiaux.</p>
+      <p>Reportages familiaux à venir...</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2024 keur mame DIAMANGAL</p>
+    <p>Copyright © 2024 - KEUR MAME DIAMANGAL</p>
   </footer>
-
-  <!-- Lightbox2 JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
