--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       text-decoration: none;
     }
 
+    /* Style for lightbox images */
+    .lightbox img {
+      max-width: 100%; /* Make sure the image does not exceed the screen width */
+      height: auto; /* Maintain aspect ratio */
+    }
+
   </style>
   <!-- Add Lightbox script -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
@@ -99,125 +105,143 @@
     <section id="images">
       <h2>IMAGES</h2>
       <!-- Images with thumbnail and lightbox feature -->
-      <a href="images/IMG-20240322-WA0065.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0065.jpg" data-lightbox="family-images" data-title="Image 1">
         <img src="images/IMG-20240322-WA0065.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0066.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0066.jpg" data-lightbox="family-images" data-title="Image 2">
         <img src="images/IMG-20240322-WA0066.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0067.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0067.jpg" data-lightbox="family-images" data-title="Image 3">
         <img src="images/IMG-20240322-WA0067.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0068.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0068.jpg" data-lightbox="family-images" data-title="Image 4">
         <img src="images/IMG-20240322-WA0068.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0069.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0069.jpg" data-lightbox="family-images" data-title="Image 5">
         <img src="images/IMG-20240322-WA0069.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0070.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0070.jpg" data-lightbox="family-images" data-title="Image 6">
         <img src="images/IMG-20240322-WA0070.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0071.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0071.jpg" data-lightbox="family-images" data-title="Image 7">
         <img src="images/IMG-20240322-WA0071.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0072.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0072.jpg" data-lightbox="family-images" data-title="Image 8">
         <img src="images/IMG-20240322-WA0072.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0073.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0073.jpg" data-lightbox="family-images" data-title="Image 9">
         <img src="images/IMG-20240322-WA0073.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0074.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0074.jpg" data-lightbox="family-images" data-title="Image 10">
         <img src="images/IMG-20240322-WA0074.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0075.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0075.jpg" data-lightbox="family-images" data-title="Image 11">
         <img src="images/IMG-20240322-WA0075.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0076.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0076.jpg" data-lightbox="family-images" data-title="Image 12">
         <img src="images/IMG-20240322-WA0076.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0077.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0077.jpg" data-lightbox="family-images" data-title="Image 13">
         <img src="images/IMG-20240322-WA0077.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0078.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0078.jpg" data-lightbox="family-images" data-title="Image 14">
         <img src="images/IMG-20240322-WA0078.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0079.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0079.jpg" data-lightbox="family-images" data-title="Image 15">
         <img src="images/IMG-20240322-WA0079.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0080.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0080.jpg" data-lightbox="family-images" data-title="Image 16">
         <img src="images/IMG-20240322-WA0080.jpg" class="thumbnail">
       </a>
       <!-- Continue filling the rest up to 110 -->
-      <a href="images/IMG-20240322-WA0081.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0081.jpg" data-lightbox="family-images" data-title="Image 17">
         <img src="images/IMG-20240322-WA0081.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0082.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0082.jpg" data-lightbox="family-images" data-title="Image 18">
         <img src="images/IMG-20240322-WA0082.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0083.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0083.jpg" data-lightbox="family-images" data-title="Image 19">
         <img src="images/IMG-20240322-WA0083.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0084.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0084.jpg" data-lightbox="family-images" data-title="Image 20">
         <img src="images/IMG-20240322-WA0084.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0085.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0085.jpg" data-lightbox="family-images" data-title="Image 21">
         <img src="images/IMG-20240322-WA0085.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0086.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0086.jpg" data-lightbox="family-images" data-title="Image 22">
         <img src="images/IMG-20240322-WA0086.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0087.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0087.jpg" data-lightbox="family-images" data-title="Image 23">
         <img src="images/IMG-20240322-WA0087.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0088.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0088.jpg" data-lightbox="family-images" data-title="Image 24">
         <img src="images/IMG-20240322-WA0088.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0089.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0089.jpg" data-lightbox="family-images" data-title="Image 25">
         <img src="images/IMG-20240322-WA0089.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0090.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0090.jpg" data-lightbox="family-images" data-title="Image 26">
         <img src="images/IMG-20240322-WA0090.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0091.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0091.jpg" data-lightbox="family-images" data-title="Image 27">
         <img src="images/IMG-20240322-WA0091.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0092.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0092.jpg" data-lightbox="family-images" data-title="Image 28">
         <img src="images/IMG-20240322-WA0092.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0093.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0093.jpg" data-lightbox="family-images" data-title="Image 29">
         <img src="images/IMG-20240322-WA0093.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0094.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0094.jpg" data-lightbox="family-images" data-title="Image 30">
         <img src="images/IMG-20240322-WA0094.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0095.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0095.jpg" data-lightbox="family-images" data-title="Image 31">
         <img src="images/IMG-20240322-WA0095.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0098.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0096.jpg" data-lightbox="family-images" data-title="Image 32">
+        <img src="images/IMG-20240322-WA0096.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0097.jpg" data-lightbox="family-images" data-title="Image 33">
+        <img src="images/IMG-20240322-WA0097.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0098.jpg" data-lightbox="family-images" data-title="Image 34">
         <img src="images/IMG-20240322-WA0098.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0101.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0099.jpg" data-lightbox="family-images" data-title="Image 35">
+        <img src="images/IMG-20240322-WA0099.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0100.jpg" data-lightbox="family-images" data-title="Image 36">
+        <img src="images/IMG-20240322-WA0100.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0101.jpg" data-lightbox="family-images" data-title="Image 37">
         <img src="images/IMG-20240322-WA0101.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0104.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0102.jpg" data-lightbox="family-images" data-title="Image 38">
+        <img src="images/IMG-20240322-WA0102.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0103.jpg" data-lightbox="family-images" data-title="Image 39">
+        <img src="images/IMG-20240322-WA0103.jpg" class="thumbnail">
+      </a>
+      <a href="images/IMG-20240322-WA0104.jpg" data-lightbox="family-images" data-title="Image 40">
         <img src="images/IMG-20240322-WA0104.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0105.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0105.jpg" data-lightbox="family-images" data-title="Image 41">
         <img src="images/IMG-20240322-WA0105.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0106.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0106.jpg" data-lightbox="family-images" data-title="Image 42">
         <img src="images/IMG-20240322-WA0106.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0107.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0107.jpg" data-lightbox="family-images" data-title="Image 43">
         <img src="images/IMG-20240322-WA0107.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0108.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0108.jpg" data-lightbox="family-images" data-title="Image 44">
         <img src="images/IMG-20240322-WA0108.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0109.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0109.jpg" data-lightbox="family-images" data-title="Image 45">
         <img src="images/IMG-20240322-WA0109.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0110.jpg" data-lightbox="family-images">
+      <a href="images/IMG-20240322-WA0110.jpg" data-lightbox="family-images" data-title="Image 46">
         <img src="images/IMG-20240322-WA0110.jpg" class="thumbnail">
       </a>
     </section>
