--- a/index.html
+++ b/index.html
@@ -57,19 +57,21 @@
     h1 {
       font-family: Arial, Helvetica, sans-serif;
     }
-    .thumbnail {
-    width: 30%; /* Use percentage for responsive design */
-    height: auto; /* Maintain aspect ratio */
-    margin: 5px;
-    border: 1px solid #ccc;
-    transition: transform 0.3s ease; /* Smooth zoom */
-}
 
-@media (max-width: 600px) {
+    /* Smaller thumbnail images */
     .thumbnail {
-        width: 48%; /* Adjust for smaller screens */
+      width: 20%; /* Smaller width for thumbnail images */
+      height: auto;
+      margin: 5px;
+      border: 1px solid #ccc;
+      transition: transform 0.3s ease;
     }
-}
+
+    @media (max-width: 600px) {
+      .thumbnail {
+        width: 30%; /* Adjust thumbnail size for smaller screens */
+      }
+    }
 
     .thumbnail:hover {
       transform: scale(1.1); /* Slight zoom on hover */
@@ -79,12 +81,11 @@
       text-decoration: none;
     }
 
-    /* Style for lightbox images */
+    /* Lightbox image styles */
     .lightbox img {
-      max-width: 100%; /* Make sure the image does not exceed the screen width */
+      max-width: 100%; /* Ensure the image doesn't exceed the screen width */
       height: auto; /* Maintain aspect ratio */
     }
-
   </style>
   <!-- Add Lightbox script -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
@@ -176,80 +177,27 @@
       <a href="images/IMG-20240322-WA0086.jpg" data-lightbox="family-images" data-title="Image 22">
         <img src="images/IMG-20240322-WA0086.jpg" class="thumbnail">
       </a>
-      <a href="images/IMG-20240322-WA0087.jpg" data-lightbox="family-images" data-title="Image 23">
-        <img src="images/IMG-20240322-WA0087.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0088.jpg" data-lightbox="family-images" data-title="Image 24">
-        <img src="images/IMG-20240322-WA0088.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0089.jpg" data-lightbox="family-images" data-title="Image 25">
-        <img src="images/IMG-20240322-WA0089.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0090.jpg" data-lightbox="family-images" data-title="Image 26">
-        <img src="images/IMG-20240322-WA0090.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0091.jpg" data-lightbox="family-images" data-title="Image 27">
-        <img src="images/IMG-20240322-WA0091.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0092.jpg" data-lightbox="family-images" data-title="Image 28">
-        <img src="images/IMG-20240322-WA0092.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0093.jpg" data-lightbox="family-images" data-title="Image 29">
-        <img src="images/IMG-20240322-WA0093.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0094.jpg" data-lightbox="family-images" data-title="Image 30">
-        <img src="images/IMG-20240322-WA0094.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0095.jpg" data-lightbox="family-images" data-title="Image 31">
-        <img src="images/IMG-20240322-WA0095.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0098.jpg" data-lightbox="family-images" data-title="Image 34">
-        <img src="images/IMG-20240322-WA0098.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0101.jpg" data-lightbox="family-images" data-title="Image 37">
-        <img src="images/IMG-20240322-WA0101.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0104.jpg" data-lightbox="family-images" data-title="Image 40">
-        <img src="images/IMG-20240322-WA0104.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0105.jpg" data-lightbox="family-images" data-title="Image 41">
-        <img src="images/IMG-20240322-WA0105.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0106.jpg" data-lightbox="family-images" data-title="Image 42">
-        <img src="images/IMG-20240322-WA0106.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0107.jpg" data-lightbox="family-images" data-title="Image 43">
-        <img src="images/IMG-20240322-WA0107.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0108.jpg" data-lightbox="family-images" data-title="Image 44">
-        <img src="images/IMG-20240322-WA0108.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0109.jpg" data-lightbox="family-images" data-title="Image 45">
-        <img src="images/IMG-20240322-WA0109.jpg" class="thumbnail">
-      </a>
-      <a href="images/IMG-20240322-WA0110.jpg" data-lightbox="family-images" data-title="Image 46">
-        <img src="images/IMG-20240322-WA0110.jpg" class="thumbnail">
-      </a>
     </section>
-
+    
     <section id="videos">
       <h2>VIDÉOS</h2>
-      <p>Vidéos familiales à venir...</p>
+      <video controls width="320" height="240">
+      </video>
     </section>
 
     <section id="biographies">
       <h2>BIOGRAPHIES</h2>
-      <p>Biographies familiales à venir...</p>
+      <p>Voici les biographies des membres importants de la famille Keur Mame Diamangal.</p>
     </section>
 
     <section id="reportages">
       <h2>REPORTAGES</h2>
-      <p>Reportages familiaux à venir...</p>
+      <p>Les reportages réalisés par et pour la famille.</p>
     </section>
   </main>
-
+  
   <footer>
-    <p>Copyright © 2024 - KEUR MAME DIAMANGAL</p>
+    <p>&copy; 2024 KEUR MAME DIAMANGAL. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
