--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     /* Smaller thumbnail images */
     .thumbnail {
       width: 20%; /* Smaller width for thumbnail images */
-      height: auto;
+      height: 30%;
       margin: 5px;
       border: 1px solid #ccc;
       transition: transform 0.3s ease;
@@ -181,13 +181,12 @@
     
     <section id="videos">
       <h2>VIDÉOS</h2>
-      <video controls width="320" height="240">
-      </video>
+      <p> Les Vidéos seront disponibles dans quelques Jour!</p>
     </section>
 
     <section id="biographies">
       <h2>BIOGRAPHIES</h2>
-      <p>Voici les biographies des membres importants de la famille Keur Mame Diamangal.</p>
+      <p>Les biographies des membres importants de la famille Keur Mame Diamangal.</p>
     </section>
 
     <section id="reportages">
