--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <section id="biographies">
       <h2>BIOGRAPHIES</h2>
         <h3>ARBRE GÉNÉALOGIQUE DIAME MANGALE</h3>
-        
+        <p><strong>DIAME MANGALE</strong> avait trois épouses HAWA, FAMA et DANDIO. <br>Qui ont donné naissance à notre lignée. </p>
         <!-- Famille de Hawa -->
         <div class="famille">
           <h3>1. HAWA</h3>
