--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
   
     /* Styles pour les images en vignettes */
     .thumbnail {
-      width: 30%;
-      height: auto;
+      width: 20%;
+      height: 20px;
       margin: 5px;
       border: 1px solid #ccc;
       transition: transform 0.3s ease;
     }
   
-    @media (max-width: 600px) {
+    @media (max-width: 100px) {
       .thumbnail {
-        width: 48%;
+        width: 45%;
       }
     }
   
