--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
     /* Styles pour les images en vignettes */
     .thumbnail {
       width: 20%;
-      height: 20px;
-      margin: 5px;
-      border: 1px solid #ccc;
+      height: 20;
+      margin: 1px;
+      border: 5px solid #ffffff;
       transition: transform 0.3s ease;
     }
   
     @media (max-width: 100px) {
       .thumbnail {
-        width: 45%;
+        width: 48%;
       }
     }
   
