--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
   justify-content: center; /* Centre horizontalement */
   gap: 5px; /* Réduit l'espacement entre les images */
   padding: 10px;
+
 }
 
 /* Styles pour les vignettes */
@@ -111,7 +112,7 @@
   border-radius: 5px; /* Légèrement arrondi */
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); /* Ombre subtile */
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
+  align-items: center;} /*centre les vignettes*/
 
 /* Animation au survol */
 .thumbnail:hover {
